--- a/lang/en.json
+++ b/lang/en.json
@@ -320,8 +320,10 @@
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
     "nonContentFolders": "Non-Content folders found in Curation folder. Are they supposed to be there?",
+    "addAppWarnings": "Add App Warnings:",
     "ilc_notHttp": "Use HTTP.",
-    "ilc_nonExistant": "File not found in 'content' folder."
+    "ilc_nonExistant": "File not found in 'content' folder.",
+    "illegalFolderName": "Illegal Folder Name"
   },
   "playlist": {
     "enterDescriptionHere": "Enter a description here...",
